relative board, grid page and fixed layout problem
fixed GamePage body on 100vh
relative body element
64vh x 64vh board
grid GamePage
fixed engine layout problem on safari

--- a/src/pages/GamePage/ui/style.module.css
+++ b/src/pages/GamePage/ui/style.module.css
@@ -3,11 +3,10 @@
 }
 
 .body_wrapper {
-    margin-top: 64px;
-    display: flex;
-    flex-direction: column;
-    padding-top: 20px;
+    display: grid;
+    grid-template-rows: 8vh 64vh 1fr;
     gap: 20px;
+    height: 100vh;
     box-sizing: border-box;
     width: 100%;
 }
@@ -15,6 +14,6 @@
 .horizontal_split {
     display: grid;
     gap: 20px;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 64vh 1fr;
     padding: 0 20px;
 }
