--- a/src/widgets/BoardManager/ui/styles.module.css
+++ b/src/widgets/BoardManager/ui/styles.module.css
@@ -2,8 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 200px;
-    background-color: antiquewhite;
+    background-color: var(--white-primary-color);
 
     gap: 20px;
 }
