--- a/src/widgets/ChessGame/components/Board/ui/styles.module.css
+++ b/src/widgets/ChessGame/components/Board/ui/styles.module.css
@@ -1,6 +1,5 @@
 .board {
-    width: calc(64px * 8);
-    height: calc(64px * 8);
+    height: 64vh;
     display: flex;
     flex-wrap: wrap;
 }
