--- a/src/widgets/Engine/components/EvaluationBar/styles.module.css
+++ b/src/widgets/Engine/components/EvaluationBar/styles.module.css
@@ -1,7 +1,7 @@
 .evaluationBar {
     position: relative;
     width: 32px;
-    height: 512px;
+    height: 100%;
 }
 .evaluationBlack {
     position: absolute;
