--- a/src/widgets/Engine/ui/styles.module.css
+++ b/src/widgets/Engine/ui/styles.module.css
@@ -1,10 +1,11 @@
 .engine {
     display: flex;
     gap: 8px;
+    height: 64vh;
 }
 
 .contentWrapper {
     width: 100%;
     display: grid;
-    grid-template-rows: 64px 128px 128px 128px 64px;
+    grid-template-rows: 12.5% 25% 25% 25% 12.5%;
 }
