--- a/src/widgets/Header/ui/styles.module.css
+++ b/src/widgets/Header/ui/styles.module.css
@@ -1,13 +1,7 @@
 .header {
-    z-index: 100;
-    position: fixed;
-    top: 0;
-    left: 0;
     width: 100%;
-    height: 64px;
     background-color: var(--white-primary-color);
     color: var(--black-primary-color);
-
     display: flex;
     justify-content: center;
     align-items: center;
